[project]
name = "Titanic_dataset_EDA"
version = "0.1.0"
authors=["Jun Hyeong - Hwang", email: "junhyeonghwang0940@gmail.com"]
requires-python = "=3.10"

[project.dependencies]
- python=3.10
- pandas=2.2.2
- numpy=1.26.4
- scikit_learn=1.5.1
- matplotlib = 3.9.2


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
